--- a/untitled2.ipynb
+++ b/untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqtpDKGkYi+8mWP03dZUQS",
+      "authorship_tag": "ABX9TyMWyD30ebHuqdhqRvZCGCOj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -584,6 +584,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "class types in ehih var are public"
+      ],
+      "metadata": {
+        "id": "JVZimbnqLuXr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class demo:\n",
@@ -611,6 +620,146 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "LbUP9V56NwEo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "let think we have class with private var\n",
+        "26oct 2023"
+      ],
+      "metadata": {
+        "id": "rIEZgKVjLyTE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class course:\n",
+        "  _cname=''\n",
+        "  _duration=''\n",
+        "  _fee=''\n",
+        "\n",
+        "  def getdata():\n",
+        "    _cname='btech'\n",
+        "    _duration='4year'\n",
+        "    _fee='70000'\n",
+        "  def putdata():\n",
+        "    print('course name:',_cname)\n",
+        "    print('duration :',_duration)\n",
+        "    print('fee:',_fee)\n",
+        "\n",
+        "\n",
+        "y1=course\n",
+        "y1.getdata()\n",
+        "y1.putdata()\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KoMA1IZdL4Bv",
+        "outputId": "87a0fde9-9536-4520-d1f3-46367cd7ecab"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "course name: Btech\n",
+            "duration :  3years\n",
+            "fee: 40000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class course:\n",
+        "  def __init__(self,s,d,f):\n",
+        "    self._cname=s\n",
+        "    self._duration=d\n",
+        "    self._fee=f\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def putdata(self):\n",
+        "    print('course name:',self._cname)\n",
+        "    print('duration :',self._duration)\n",
+        "    print('fee:',self._fee)\n",
+        "\n",
+        "y1=course('Btech',' 4years',40000)\n",
+        "y1.putdata()\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yNyeu8PYP2wS",
+        "outputId": "56f6ec35-1a82-4b74-a1f3-c49686293fda"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "course name: Btech\n",
+            "duration :  3years\n",
+            "fee: 40000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "create a class and consteructer thatts take sub no of 5 num and return its in percentage"
+      ],
+      "metadata": {
+        "id": "CrimunLMXeRZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#pro03\n",
+        "class course:\n",
+        "  def __init__(self,s1,s2,s3,s4,s5):\n",
+        "    self.math=s1\n",
+        "    self.phy=s2\n",
+        "    self.chm=s3\n",
+        "    self.eng=s4\n",
+        "    self.hin=s5\n",
+        "\n",
+        "  def printdata(self):\n",
+        "     print('math',self.math)\n",
+        "     print('phy',self.phy)\n",
+        "     print('chm',self.chm)\n",
+        "     print('eng',self.eng)\n",
+        "     print('hin',self.hin)\n",
+        "  def percentage(self):\n",
+        "     return((self.math+self.phy+self.chm+self.eng+self.hin)/5)\n",
+        "\n",
+        "c1=course(78,89,56,96,99)\n",
+        "c1.printdata()\n",
+        "c1.percentage()\n"
+      ],
+      "metadata": {
+        "id": "U2FRSQTRXnYS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
