--- a/untitled2.ipynb
+++ b/untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWyD30ebHuqdhqRvZCGCOj",
+      "authorship_tag": "ABX9TyNvtQCDox9wJECucCn9fXer",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -749,17 +749,43 @@
         "     print('eng',self.eng)\n",
         "     print('hin',self.hin)\n",
         "  def percentage(self):\n",
-        "     return((self.math+self.phy+self.chm+self.eng+self.hin)/5)\n",
+        "     return('percentage:' ,(self.math+self.phy+self.chm+self.eng+self.hin)/5)\n",
         "\n",
         "c1=course(78,89,56,96,99)\n",
         "c1.printdata()\n",
         "c1.percentage()\n"
       ],
       "metadata": {
-        "id": "U2FRSQTRXnYS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U2FRSQTRXnYS",
+        "outputId": "7313000d-6bd1-4bab-a3bd-a7e34dc01b13"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "math 78\n",
+            "phy 89\n",
+            "chm 56\n",
+            "eng 96\n",
+            "hin 99\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('percentage:', 83.6)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
