--- a/untitled2.ipynb
+++ b/untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLFBW5oYiiek0iHPdb8KLL",
+      "authorship_tag": "ABX9TyMGyr7Nxf4NULLnjf+E9G2t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -658,8 +658,7 @@
         "\n",
         "y1=course\n",
         "y1.getdata()\n",
-        "y1.putdata()\n",
-        ""
+        "y1.putdata()\n"
       ],
       "metadata": {
         "colab": {
@@ -668,7 +667,7 @@
         "id": "KoMA1IZdL4Bv",
         "outputId": "87a0fde9-9536-4520-d1f3-46367cd7ecab"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,8 +697,7 @@
         "    print('fee:',self._fee)\n",
         "\n",
         "y1=course('Btech',' 4years',40000)\n",
-        "y1.putdata()\n",
-        ""
+        "y1.putdata()\n"
       ],
       "metadata": {
         "colab": {
@@ -708,7 +706,7 @@
         "id": "yNyeu8PYP2wS",
         "outputId": "56f6ec35-1a82-4b74-a1f3-c49686293fda"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +760,7 @@
         "id": "U2FRSQTRXnYS",
         "outputId": "7313000d-6bd1-4bab-a3bd-a7e34dc01b13"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,18 +787,404 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "assignment1"
+      ],
       "metadata": {
         "id": "cFLWBUhQfNQG"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#assignment1\n",
+        "class branch:\n",
+        "    def __init__(self,bn,ifs):\n",
+        "        self.bname=bn\n",
+        "        self.ifsc=ifs\n",
+        "    def branchdetails(self):\n",
+        "        print('branch name:',self.bname)\n",
+        "        print ('ifsc',self.ifsc)\n",
+        "\n",
+        "\n",
+        "class account(branch):\n",
+        "    def __init__(self,ano,cn):\n",
+        "      super().__init__(ano,cn)\n",
+        "      self.anum=ano\n",
+        "      self.cname=cn\n",
+        "\n",
+        "\n",
+        "#class saving(account):\n",
+        "    def saving(self,cam):\n",
+        "        self.mina=10000\n",
+        "        self.caa=cam\n",
+        "#class loan(saving):\n",
+        "    def loan(self,lid,lam):\n",
+        "        self.loanid=lid\n",
+        "        self.loana=lam\n",
+        "\n",
+        "#class payment(loan):\n",
+        "    def payment(self,pid,pa):\n",
+        "        self.paymentid=pid\n",
+        "        self.paymentam=pa\n",
+        "\n",
+        "class acountdetails(account):\n",
+        "   def __init__(self,ls):\n",
+        "        super().__init__(ls,cn)\n",
+        "        print('num:',self.ls)\n",
+        "        print(self.cn)\n",
+        "        print ('account num:',self.anum)\n",
+        "        print('branch name:',self.bname)\n",
+        "        print ('account num:',self.anum)\n",
+        "        print ('custmer name',self.cname)\n",
+        "        print ('****************************************')\n",
+        "        print('saving account balance:',self.caa)\n",
+        "        print('*minimum balance limit(maintain above this level ):',self.mina)\n",
+        "        print ('****************************************')\n",
+        "        print (' type -- saving account ')\n",
+        "\n",
+        "        print ('loan id',self.loanid)\n",
+        "        print ('loan amount:',self.loana)\n",
+        "        print ('last emi payment list:-',)\n",
+        "        print ('payment id:',self.paymentid)\n",
+        "        print('payment amount:',self.paymentam)\n",
+        "\n",
+        "a1=branch('sbi saragaon','sbin00968')\n",
+        "a2=account(1750005698,'yami yamako')\n",
+        "a2.saving('23099998')\n",
+        "a2.loan(780005674,300000)\n",
+        "a2.payment(4523000897,300000)\n",
+        "a1.branchdetails()\n",
+        "a3=acountdetails(2)\n",
+        "a3.accdetails()\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "elvz3FGjffIp"
+        "id": "elvz3FGjffIp",
+        "outputId": "74f2fab4-f2e5-486c-c4bd-6e53d448e8fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 401
+        }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "branch name: sbi saragaon\n",
+            "ifsc sbin00968\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-02d03a7c6a19>\u001b[0m in \u001b[0;36m<cell line: 59>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0ma2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpayment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4523000897\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m300000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbranchdetails\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m \u001b[0ma3\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0macountdetails\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0ma3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccdetails\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-17-02d03a7c6a19>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ls)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0macountdetails\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m    \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'num:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'cn' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "29 oct 2023"
+      ],
+      "metadata": {
+        "id": "AiGlxbkJe24r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import numpy as np\n",
+        "arr=np.array([5,7,8,9,13])\n",
+        "print('all:',arr)\n",
+        "#For max value\n",
+        "max=0\n",
+        "for i in range(0,5):\n",
+        "    if(arr[i]>max):\n",
+        "        max=arr[i]\n",
+        "\n",
+        "print('largest num is:',max)\n",
+        "\n",
+        "#for addition\n",
+        "add=0\n",
+        "f=0\n",
+        "for j in range(0,5):\n",
+        "  add+=arr[j]\n",
+        "  #by fun\n",
+        "  f=sum(arr)\n",
+        "print('addition is:',add,'by fun:',f)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SMkDmEZ_e2g4",
+        "outputId": "08934de2-3795-4c7c-a38d-2cb7a53a6db9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "all: [ 5  7  8  9 13]\n",
+            "largest num is: 13\n",
+            "addition is: 42 42\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "arr=np.array([[5,6,5],\n",
+        "              [3,5,6]])\n",
+        "print('orijnal array:')\n",
+        "print(arr)\n",
+        "\n",
+        "#for matrix print\n",
+        "print('in matrix :')\n",
+        "for i in range(0,2):\n",
+        "  for j in range(0,3):\n",
+        "   # print('in matrix :')\n",
+        "    print(arr[i,j], end=\" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v7BC_hF2fT9E",
+        "outputId": "c5ef3e32-9988-4f51-c2f3-91bfacc90c9d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "orijnal array:\n",
+            "[[5 6 5]\n",
+            " [3 5 6]]\n",
+            "in matrix :\n",
+            "5 6 5 \n",
+            "3 5 6 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "symetric and asymetric key"
+      ],
+      "metadata": {
+        "id": "FPJIFF0SpFTv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#assignmet 2\n",
+        "import numpy as np\n",
+        "arr=np.array([[5,6,5],\n",
+        "              [3,5,6]\n",
+        "              ,[4,57,78]])\n",
+        "arr2=np.array([[8,6,7],\n",
+        "              [12,6,78]\n",
+        "              ,[3,5,0]])\n",
+        "print('orijnal array:')\n",
+        "print(arr)\n",
+        "\n",
+        "#for matrix print\n",
+        "# print('in matrix :')\n",
+        "print('in matrix :')\n",
+        "for i in range(0,3):\n",
+        "  for j in range(0,3):\n",
+        "    for k in range(0,3):\n",
+        "    print(arr[i,j], end=\" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gJkXmML0i9o8",
+        "outputId": "f2ce8b96-013a-4573-bcaa-497fbb6791ca"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "orijnal array:\n",
+            "[[ 5  6  5]\n",
+            " [ 3  5  6]\n",
+            " [ 4 57 78]]\n",
+            "in matrix :\n",
+            "5 6 5 \n",
+            "3 5 6 \n",
+            "4 57 78 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "private_key = 0\n",
+        "p1 = int(input('Enter the 1st prime number: '))\n",
+        "p2 = int(input('Enter the 2nd prime number: '))\n",
+        "p1p2 = p1 * p2\n",
+        "feeN = (p1 - 1) * (p2 - 1)\n",
+        "\n",
+        "while True:\n",
+        "    public_key = int(input('Enter a random number between 1 and ' + str(feeN) + ': '))\n",
+        "    if public_key > 1 and public_key < feeN :\n",
+        "        break\n",
+        "    else:\n",
+        "        print('Public key must be between 1 and', feeN, 'and coprime to feeN.')\n",
+        "\n",
+        "for k in range(1, p1p2):\n",
+        "    if (1 + (k * feeN)) % public_key == 0:\n",
+        "        private_key = int((1 + (k * feeN)) / public_key)\n",
+        "        break\n",
+        "\n",
+        "print('feeN:', feeN)\n",
+        "print('Public key:', public_key)\n",
+        "print('Private key:', private_key)\n"
+      ],
+      "metadata": {
+        "id": "tsqQkDqHk58Y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8187f710-ef65-4ca5-c803-8466a9520de1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the 1st prime number: 13\n",
+            "Enter the 2nd prime number: 17\n",
+            "Enter a random number between 1 and 192: 47\n",
+            "feeN: 192\n",
+            "Public key: 47\n",
+            "Private key: 143\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#RSA algo by-----\n",
+        "from math import *\n",
+        "def is_prime(n):\n",
+        "  if n<=1:\n",
+        "    return False\n",
+        "  for i in range(2,n):\n",
+        "    if n%i==0:\n",
+        "      return False\n",
+        "\n",
+        "  return True\n",
+        "def rsa_algo(p: int, q: int, msg: int):\n",
+        "    n = p * q\n",
+        "    t = (p - 1) * (q - 1)\n",
+        "    for k in range(2, t):\n",
+        "        if gcd(k, t) == 1:\n",
+        "            e = k\n",
+        "            break\n",
+        "    j = 0\n",
+        "    while True:\n",
+        "        if (j * e) % t == 1:\n",
+        "            d = j\n",
+        "            break\n",
+        "        j += 1\n",
+        "    ct = (msg ** e) % n\n",
+        "    print(f\"Cypher text is : \",ct)\n",
+        "    ot = (ct ** d) % n\n",
+        "    print(f\"Original Text is : \",ot)\n",
+        "#for p\n",
+        "p=int(input('enter any 1st prime num:'))\n",
+        "while not is_prime(p):\n",
+        "  print(\"The number is not prime.\")\n",
+        "  p = int(input(\"Enter a prime number: \"))\n",
+        "print(\"The prime number is:\", p)\n",
+        "\n",
+        "\n",
+        "#foe q\n",
+        "q=int(input('enter any 2nd prime num:'))\n",
+        "while not is_prime(q):\n",
+        "  print(\"The number is not prime.\")\n",
+        "  q = int(input(\"Enter a prime number: \"))\n",
+        "print(\"The prime number is:\", q)\n",
+        "\n",
+        "\n",
+        "#for mesage\n",
+        "msg=int(input('enter any int message you want:'))\n",
+        "rsa_algo(p,q,msg)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "11_jNSom_xWh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d28add2f-4603-4a84-e91f-b98eb9efade9"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter any 1st prime num:45\n",
+            "The number is not prime.\n",
+            "Enter a prime number: 65\n",
+            "The number is not prime.\n",
+            "Enter a prime number: 67\n",
+            "The prime number is: 67\n",
+            "enter any 2nd prime num:2365\n",
+            "The number is not prime.\n",
+            "Enter a prime number: 139\n",
+            "The prime number is: 139\n",
+            "enter any int message you want:123\n",
+            "Cypher text is :  6851\n",
+            "Original Text is :  123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "J9cHABNmqZoM"
+      },
+      "execution_count": 4,
       "outputs": []
     }
   ]
