--- a/untitled2.ipynb
+++ b/untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGyr7Nxf4NULLnjf+E9G2t",
+      "authorship_tag": "ABX9TyNdEPgriQEDUZ7WfgdYblrO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1153,9 +1153,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d28add2f-4603-4a84-e91f-b98eb9efade9"
+        "outputId": "2ab5cde1-d94a-438f-9383-b00bace79122"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,17 +1163,64 @@
           "text": [
             "enter any 1st prime num:45\n",
             "The number is not prime.\n",
-            "Enter a prime number: 65\n",
-            "The number is not prime.\n",
-            "Enter a prime number: 67\n",
-            "The prime number is: 67\n",
-            "enter any 2nd prime num:2365\n",
-            "The number is not prime.\n",
-            "Enter a prime number: 139\n",
-            "The prime number is: 139\n",
-            "enter any int message you want:123\n",
-            "Cypher text is :  6851\n",
-            "Original Text is :  123\n"
+            "Enter a prime number: 43\n",
+            "The prime number is: 43\n",
+            "enter any 2nd prime num:53\n",
+            "The prime number is: 53\n",
+            "enter any int message you want:1234\n",
+            "Cypher text is :  786\n",
+            "Original Text is :  1234\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from cryptography.hazmat.primitives.ciphers import Cipher, algorithms, modes\n",
+        "from cryptography.hazmat.primitives.padding import PKCS7\n",
+        "from cryptography.hazmat.backends import default_backend\n",
+        "import base64\n",
+        "def encrypt(pt, k):\n",
+        "    cipher = Cipher(algorithms.AES(k), modes.ECB(), backend=default_backend())\n",
+        "    encryptor = cipher.encryptor()\n",
+        "    padder = PKCS7(algorithms.AES.block_size).padder()\n",
+        "    padded_data = padder.update(pt) + padder.finalize()\n",
+        "    ciphertext = encryptor.update(padded_data) + encryptor.finalize()\n",
+        "    encodedciphertext = base64.b64encode(ciphertext)\n",
+        "    return encodedciphertext\n",
+        "def decrypt(ciphertext, k):\n",
+        "    cipher = Cipher(algorithms.AES(k), modes.ECB(), backend=default_backend())\n",
+        "    decryptor = cipher.decryptor()\n",
+        "    decodedciphertext = base64.b64decode(ciphertext)\n",
+        "    padded_data = decryptor.update(decodedciphertext) + decryptor.finalize()\n",
+        "    unpadder = PKCS7(algorithms.AES.block_size).unpadder()\n",
+        "    pt = unpadder.update(padded_data) + unpadder.finalize()\n",
+        "    return pt\n",
+        "k = b'\\x01\\x23\\x45\\x67\\x89\\xAB\\xCD\\xEF\\xFE\\xDC\\xBA\\x98\\x76\\x54\\x32\\x10' \\\n",
+        "      b'\\x01\\x23\\x45\\x67\\x89\\xAB\\xCD\\xEF\\xFE\\xDC\\xBA\\x98\\x76\\x54\\x32\\x10'\n",
+        "pt = input(\"Enter the pt: \").encode()\n",
+        "enc = encrypt(pt, k)\n",
+        "print(\"The encrypted message is :\", enc)\n",
+        "dec = decrypt(enc, k)\n",
+        "print(\"The decrypted message is:\", dec.decode('utf-8'))"
+      ],
+      "metadata": {
+        "id": "J9cHABNmqZoM",
+        "outputId": "de9ca310-8c43-47f1-ec33-6a17e70e70e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the pt: aman\n",
+            "The encrypted message is : b'Ea3s2IemzB9lf2DTd1Bmhw=='\n",
+            "The decrypted message is: aman\n"
           ]
         }
       ]
@@ -1182,9 +1229,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "J9cHABNmqZoM"
+        "id": "NGijBbs7OgxL"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     }
   ]
