--- a/untitled2.ipynb
+++ b/untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdEPgriQEDUZ7WfgdYblrO",
+      "authorship_tag": "ABX9TyPuaflCQaheEpNoa3uoy7AI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1207,10 +1207,10 @@
       ],
       "metadata": {
         "id": "J9cHABNmqZoM",
-        "outputId": "de9ca310-8c43-47f1-ec33-6a17e70e70e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "de9ca310-8c43-47f1-ec33-6a17e70e70e7"
       },
       "execution_count": 1,
       "outputs": [
@@ -1227,9 +1227,46 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Define the two matrices\n",
+        "A = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+        "B = [[10, 11, 12], [13, 14, 15], [16, 17, 18]]\n",
+        "\n",
+        "# Initialize the result matrix\n",
+        "C = [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+        "\n",
+        "# Perform the multiplication\n",
+        "for i in range(len(A)):\n",
+        "  for j in range(len(B[0])):\n",
+        "    for k in range(len(A[0])):\n",
+        "      C[i][j] += A[i][k] * B[k][j]\n",
+        "\n",
+        "# Print the result matrix\n",
+        "print(C)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NGijBbs7OgxL",
+        "outputId": "9842b389-bc8f-493d-c07f-f4b55ec2b497"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[84, 90, 96], [201, 216, 231], [318, 342, 366]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "NGijBbs7OgxL"
+        "id": "uOO0Fm9CP5Yf"
       },
       "execution_count": null,
       "outputs": []
